feat: add docker-compose to .ctst converter and update dependencies
- Add `ctst convert` CLI command to convert docker-compose.yml to .ctst format
  Handles services, ports, volumes, env vars, depends_on, healthchecks,
  restart policies, resource limits, and Docker Hub image references
- Fix deny.toml for cargo-deny 0.19+ (unmaintained = "workspace", add unsound)
- Update deps: nix 0.29->0.31, petgraph 0.7->0.8, crossterm 0.28->0.29
- Bump MSRV to 1.86.0 (required by ratatui 0.30)
- Switch security CI to EmbarkStudios/cargo-deny-action@v2
- Update docs: CLI reference, migration guide, spec for convert command

--- a/deny.toml
+++ b/deny.toml
@@ -1,7 +1,9 @@
 [advisories]
 vulnerability = "deny"
-unmaintained = "warn"
+unmaintained = "workspace"
+unsound = "all"
 yanked = "deny"
+ignore = []
 
 [licenses]
 unlicensed = "deny"
@@ -14,6 +16,9 @@ allow = [
     "Unicode-3.0",
     "Unicode-DFS-2016",
     "Zlib",
+    "BSL-1.0",
+    "CC0-1.0",
+    "OpenSSL",
 ]
 copyleft = "deny"
 
