--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,6 +14,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - run: cargo install cargo-deny --locked
-      - run: cargo deny check
+      - uses: EmbarkStudios/cargo-deny-action@v2
