--- a/crates/containust-cli/Cargo.toml
+++ b/crates/containust-cli/Cargo.toml
@@ -20,6 +20,9 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tokio = { workspace = true }
+serde = { workspace = true }
+serde_yaml = { workspace = true }
+serde_json = { workspace = true }
 
 [lints]
 workspace = true
