feat: implement full container runtime across all platforms
Complete implementation of the Containust container runtime with
9 phases delivering a working cross-platform container engine.

Core Runtime (Linux):
- Namespace isolation (PID, Mount, Network, User, IPC, UTS) via unshare/setns
- Cgroup v2 resource management (CPU, memory, I/O)
- OverlayFS, pivot_root, essential filesystem mounts
- Capability dropping via prctl(PR_CAPBSET_DROP)
- All functions gated with #[cfg(target_os = "linux")]

Image Management (cross-platform):
- SHA-256 file hashing with sha2 crate
- Source resolution: file://, tar://, https:// URI protocols
- Layer extraction with tar + flate2 (supports .tar.gz)
- JSON-backed image catalog with CRUD operations

.ctst Parser (cross-platform):
- Full nom-based lexer with 17 token types
- Recursive-descent parser for 16+ component properties
- Semantic validation (duplicates, undefined refs, missing image)
- Topological sort via petgraph with cycle detection
- Connection resolver with auto-wired env injection
- Import resolver for local .ctst files

Container Lifecycle:
- Process spawning with chroot-based isolation
- Container start/stop with SIGTERM/SIGKILL grace period
- Exec via nsenter-based namespace joining
- JSON state persistence with full container metadata
- Cgroup-based metrics collection
- Append/read log management

Engine + CLI Wiring:
- ContainerBackend trait for platform abstraction
- LinuxNativeBackend with direct syscall implementation
- Engine orchestrator: parse -> validate -> graph -> deploy
- All 10 CLI commands wired (build, plan, run, ps, exec, stop,
  images, convert, logs, vm)

VM Backend (macOS/Windows):
- QEMU-based lightweight Alpine Linux VM
- Platform acceleration: HVF (macOS), WHPX (Windows), TCG fallback
- JSON-RPC protocol over TCP for container operations
- Auto-detection with ~/.containust/vm/ asset management

Testing:
- 167 tests passing, 0 failures
- 36 end-to-end integration tests
- Zero clippy warnings, zero f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ nom = "8"
 petgraph = "0.8"
 
 # Linux system
-nix = { version = "0.31", features = ["mount", "sched", "signal", "user", "process", "fs"] }
+nix = { version = "0.31", features = ["mount", "sched", "signal", "user", "process", "fs", "hostname"] }
 libc = "0.2"
 
 # eBPF
@@ -67,7 +67,12 @@ sha2 = "0.10"
 # YAML parsing (for docker-compose converter)
 serde_yaml = "0.9"
 
+# Archive & compression
+tar = "0.4"
+flate2 = "1"
+
 # Utilities
+which = "7"
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 tempfile = "3"
