--- a/crates/containust-cli/Cargo.toml
+++ b/crates/containust-cli/Cargo.toml
@@ -15,6 +15,9 @@ path = "src/main.rs"
 containust-common = { workspace = true }
 containust-sdk = { workspace = true }
 containust-tui = { workspace = true }
+containust-runtime = { workspace = true }
+containust-compose = { workspace = true }
+containust-image = { workspace = true }
 clap = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
