--- a/crates/containust-image/Cargo.toml
+++ b/crates/containust-image/Cargo.toml
@@ -13,6 +13,8 @@ containust-core = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
+tar = { workspace = true }
+flate2 = { workspace = true }
 tracing = { workspace = true }
 thiserror = { workspace = true }
 
