feat: self-contained agnostic runtime with project-local storage
- Rewrite VM backend as vm/ module with separate initramfs builder
- Implement robust BusyBox nc-based agent with handler script pattern
- Add project-local .containust/ directory for per-project state
- Add global ~/.containust/cache/ for shared immutable VM assets
- Inject CPIO directory entries for /tmp /run /var /root /proc /sys /dev
- Fix init script to create directories before mounting
- Fix container chroot setup with proper dynamic library copying
- Fix complex shell command execution via temporary script files
- Add step-by-step colored UX output with timing in CLI
- Fix detect_backend test to account for QEMU availability on macOS
- Add node-hello.ctst example serving Hello World on port 6500
- Refactor engine.rs into smaller focused functions for clippy compliance

--- a/crates/containust-runtime/Cargo.toml
+++ b/crates/containust-runtime/Cargo.toml
@@ -21,6 +21,9 @@ chrono = { workspace = true }
 nix = { workspace = true }
 libc = { workspace = true }
 which = { workspace = true }
+reqwest = { workspace = true }
+flate2 = { workspace = true }
+tar = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
