--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,8 +71,12 @@ serde_yaml = "0.9"
 tar = "0.4"
 flate2 = "1"
 
+# HTTP client
+reqwest = { version = "0.12", features = ["blocking"] }
+
 # Utilities
 which = "7"
+ctrlc = "3"
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 tempfile = "3"
