--- a/crates/containust-cli/Cargo.toml
+++ b/crates/containust-cli/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
+ctrlc = { workspace = true }
 
 [lints]
 workspace = true
