docs: update all documentation for project-local storage and working runtime
- README: add working demo section, project-local storage explanation,
  updated project structure with vm/ module, node-hello.ctst in examples table
- ARCHITECTURE: add VM module structure details, storage architecture
  section, updated VM lifecycle with actual implementation details
- SPEC: add storage model table, update VM agent description to reflect
  BusyBox shell-based implementation, add asset caching details
- CLI_REFERENCE: replace all /var/lib/containust paths with project-local
  .containust/ paths, update environment variable defaults
- SDK_GUIDE: update config defaults to reflect project-local storage
- .gitignore: add .containust/ project-local state directory

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@
 *.pem
 *.key
 
-# Containust state
+# Containust state (project-local)
+.containust/
+# Legacy global state
 /var/lib/containust/
-state.json
 
 # OS
 .DS_Store
